# tree-sitter-grpgscript

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.grpgscript  tree-sitter.json
bindings/c/: tree-sitter-grpgscript.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_grpgscript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGrpgscript/: grpgscript.h
bindings/swift/TreeSitterGrpgscriptTests/: TreeSitterGrpgscriptTests.swift
src/: grammar.json  node-types.json  parser.c
